--- a/Day7HW-RWD-Whoscall-ByBootStrap/Whoscall.html
+++ b/Day7HW-RWD-Whoscall-ByBootStrap/Whoscall.html
@@ -68,10 +68,10 @@
                         </div>
                         <div class="function-btn mt-5">
                             <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-                                <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-                                <label class="btn btn-outline-primary px-4" for="btnradio1">IOS</label>
-                                <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-                                <label class="btn btn-outline-primary px-2" for="btnradio3">Android</label>
+                                <input type="radio" class="btn-check" name="btnradio" id="ios-btn" autocomplete="off" checked>
+                                <label class="btn btn-outline-primary px-4" for="ios-btn">IOS</label>
+                                <input type="radio" class="btn-check" name="btnradio" id="and-btn" autocomplete="off">
+                                <label class="btn btn-outline-primary px-2" for="and-btn">Android</label>
                             </div>
                         </div>
                     </div>
@@ -80,7 +80,7 @@
             <div class="function-container">
                 <div class="row mt-5 justify-content-center align-items-center">
                     <div class="col-12 col-md-5 col-lg-5 col-xl-5 ">
-                        <div class="function-pic"><img src="/Day7HW-RWD-Whoscall-ByBootStrap/whoscall/IOS1.png" alt=""></div>
+                        <div class="function-pic"><img src="/Day7HW-RWD-Whoscall-ByBootStrap/whoscall/IOS0.png" alt=""></div>
                     </div>
                     <div class="col-12 col-md-5 col-lg-5 col-xl-5 mx-2">
                         <div class="function-feature">
@@ -110,7 +110,7 @@
                 </div>
                 <div class="row justify-content-center align-items-center">
                     <div class="col-12 col-md-5 col-lg-5 col-xl-5 ">
-                        <div class="function-pic"><img src="/Day7HW-RWD-Whoscall-ByBootStrap/whoscall/IOS2.png" alt=""></div>
+                        <div class="function-pic"><img src="/Day7HW-RWD-Whoscall-ByBootStrap/whoscall/IOS1.png" alt=""></div>
                     </div>
                     <div class="col-12 col-md-5 col-lg-5 col-xl-5 ">
                         <div class="function-feature">
@@ -140,7 +140,7 @@
                 </div>
                 <div class="row justify-content-center align-items-center">
                     <div class="col-12 col-md-5 col-lg-5 col-xl-5 ">
-                        <div class="function-pic"><img src="/Day7HW-RWD-Whoscall-ByBootStrap/whoscall/IOS3.png" alt=""></div>
+                        <div class="function-pic"><img src="/Day7HW-RWD-Whoscall-ByBootStrap/whoscall/IOS2.png" alt=""></div>
                     </div>
                     <div class="col-12 col-md-5 col-lg-5 col-xl-5 mx-2 ">
                         <div class="function-feature">
@@ -170,7 +170,7 @@
                 </div>
                 <div class="row justify-content-center align-items-center">
                     <div class="col-12 col-md-5 col-lg-5 col-xl-5 ">
-                        <div class="function-pic"><img src="/Day7HW-RWD-Whoscall-ByBootStrap/whoscall/IOS4.png" alt=""></div>
+                        <div class="function-pic"><img src="/Day7HW-RWD-Whoscall-ByBootStrap/whoscall/IOS3.png" alt=""></div>
                     </div>
                     <div class="col-12 col-md-5 col-lg-5 col-xl-5 ">
                         <div class="function-feature">
@@ -588,7 +588,7 @@
     </footer>
 
 
-
+    <script src="/Day7HW-RWD-Whoscall-ByBootStrap/whoscall.js"></script>
     <script src="https://kit.fontawesome.com/592d58a0fb.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
